force-app/main/default/objects/Cloudrop__Log__c/Cloudrop__Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>CloudDrop-{0000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>