force-app/main/default/objects/Cloudrop__Log__c/fields/Cloudrop__Date__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>