force-app/main/default/objects/Cloudrop__Log__c/fields/Cloudrop__Message__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>