force-app/main/default/objects/Cloudrop__Log__c/fields/Cloudrop__Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Stacktrace__c</fullName>
    <description>This field is used to track the complete Stacktrace of the eror</description>
    <label>Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>