force-app/main/default/objects/Cloudrop__Log__c/fields/Cloudrop__Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>