force-app/main/default/objects/Cloudrop__Log__c/fields/Cloudrop__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>